--- a/ast-json/pom.xml
+++ b/ast-json/pom.xml
@@ -6,6 +6,7 @@
 
   <properties>
     <project.java.version>1.7</project.java.version>
+    <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
   </properties>
 
   <repositories>
@@ -23,7 +24,7 @@
     <dependency>
       <groupId>org.asciidoctor</groupId>
       <artifactId>asciidoctorj</artifactId>
-      <version>1.6.0-alpha.3</version>
+      <version>1.6.0-alpha.6</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
