--- a/build-asciidoctorj-mvn/asciidoctorj-api-testing/pom.xml
+++ b/build-asciidoctorj-mvn/asciidoctorj-api-testing/pom.xml
@@ -23,8 +23,13 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
+      <artifactId>mockito-core</artifactId>
+      <version>2.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.8.0</version>
     </dependency>
   </dependencies>
 
