--- a/assert-code-converter/pom.xml
+++ b/assert-code-converter/pom.xml
@@ -62,8 +62,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>${project.java.version}</source>
-          <target>${project.java.version}</target>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
         </configuration>
       </plugin>
     </plugins>
