--- a/html-converter/html-j-converter-testing/pom.xml
+++ b/html-converter/html-j-converter-testing/pom.xml
@@ -28,6 +28,11 @@
       <version>1.6.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.10.2</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
